--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,3 +88,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+permission:
+  git:
+  url: https://github.com/kamlesh9070/permission
