--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
   url_launcher: ^6.0.20
   mask_text_input_formatter: ^2.3.0
+  path_provider: ^2.0.9
+  sqflite: ^2.0.2+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
